[package]
name = "nord-proxy"
version = "0.2.4"
edition = "2024"
description = "A Rust crate for retrieving NordVPN HTTP and SOCKS5 proxy endpoints for use with reqwest."
keywords = ["nordvpn", "proxy", "socks5", "reqwest"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
